src/app/main/accounts/home/accounts-home.component.scss
.application-layout-content-wrapper {
  padding: 12px;
}

.mat-sidenav-container-account-home {
  position: absolute;
  height: calc(100% - 16px);
  width: calc(100% - 16px);
  padding: 8px;
  overflow: auto;


  .mat-sidenav-filters {
    top: 70px;

    &.mat-drawer {
      bottom: auto;
    }

    .accounts-filters {
      border-style: solid;
      border-width: 4px;
      border-top: 0;
      border-bottom: 0;
      border-right: 0;
      padding: 24px;

      .label-balance {
        font-size: 14px;
      }
    }
  }


  .mat-drawer-content {
    overflow: hidden;
  }

  .mat-sidenav-content {
    flex-direction: column;
    .buttons {
      margin-left: 40px;

      button {
        margin-right: 12px;
      }
    }

    .flex-container {
      overflow: auto;
      margin-top: 30px;
      margin-left: 40px;

      .fill-remaining {
        width: 100%;

        .list-accounts {
          width: 100%;

          .o-list-container {

            .mat-list {
              padding: 0;

              @media (min-width: 1400px) {
                .mat-card {
                  width: 90%;
                }
              }

              @media (min-width: 1700px) {
                .mat-card {
                  width: 90%;
                }
              }

              .o-list-item.mat-card {
                &:not([class*=mat-elevation-z]) {
                  box-shadow: none;
                }

                margin-bottom: 20px;
                margin-top: 0;

                label,
                span {
                  text-overflow: ellipsis;
                  white-space: nowrap;
                  overflow: hidden;
                  font-size: 14px;
                  padding: 6px 0;
                }

                label {
                  font-weight: 500;
                }

                .info-iban {

                  label,
                  span {
                    font-size: 18px;
                  }
                }

                .info-account {
                  &.border-right {
                    border-right-style: solid;
                    border-right-width: 1.5px;
                  }

                  &.border-bottom {
                    padding: 8px 0;
                    border-bottom-style: solid;
                    border-bottom-width: 1.5px;
                  }
                }

                .balance-account {

                  label,
                  span {
                    padding-top: 12px;
                    font-size: 18px;
                    padding-bottom: 0;
                  }

                  span.date {
                    font-size: 12px;
                  }
                }
              }
            }
          }
        }
      }
    }
  }
}

